minor edits, comments to self

--- a/slides.adoc
+++ b/slides.adoc
@@ -10,6 +10,9 @@
 // [.reveal]
 // [.columns]
 
+// SHOW don't TELL, pictures of what is being said
+// https://www.researchgate.net/publication/228516602_Eliminating_Buffer_Overflows_Using_the_Compiler_or_a_Standalone_Tool
+
 == Topics
 
 * Memory Safety is hot
@@ -21,13 +24,18 @@
 == Memory Safety is hot
 
 * The White House Office of the National Cyber Director (ONCD) link:https://www.whitehouse.gov/oncd/briefing-room/2024/02/26/press-release-technical-report/[press release] offering new guidance document that provides recommendations for securing cyber infrastructure. 
-*  The National Security Agency (NSA) has released a new guidance document that provides recommendations for securing {cpp} code.
-* A NIST link:https://www.nsa.gov/Press-Room/News-Highlights/Article/Article/3215760/nsa-releases-guidance-on-how-to-protect-against-software-memory-safety-issues/[press release] published guidance today to help software developers and operators prevent and mitigate software memory safety issues, which account for a large portion of exploitable vulnerabilities.
+*  The National Security Agency (NSA) has link:https://www.nsa.gov/Press-Room/News-Highlights/Article/Article/3215760/nsa-releases-guidance-on-how-to-protect-against-software-memory-safety-issues/[released] a new guidance document that provides recommendations for securing {cpp} code.
+// * A NIST link:https://www.nsa.gov/Press-Room/News-Highlights/Article/Article/3215760/nsa-releases-guidance-on-how-to-protect-against-software-memory-safety-issues/[press release] published guidance today to help software developers and operators prevent and mitigate software memory safety issues, which account for a large portion of exploitable vulnerabilities.
 * link:https://www.cisa.gov/case-memory-safe-roadmaps[CISA, NSA, FBI press release] pushing for meory safe roadmaps from organizations. 
 * and more...
 * Most of us have heard the "70% of all vulnerabilities are memory safety issues" statistic
 
 == {cpp} has a bad rep
+"memory unsafe programming languages, such as C and C++, are among the most common programming languages"
+
+"NSA advises organizations to consider making a strategic shift from programming languages that provide little or no inherent memory protection, such as C/C++ and assembly, to a memory safe language when possible"
+
+"Experts have identified a few programming languages that both lack traits associated with memory safety and also have high proliferation across critical systems, such as C and C++"
 
 Many of these press releases specifically call out {cpp} as a language that is prone to memory safety issues.
 
@@ -35,13 +43,19 @@ A lot of unsafe feature like raw pointers, manual memory management, unsafe type
 
 The complaints are real. {cpp} is powerful and flexible which lets us shoot ourselves in the foot. 
 
-== All is not lost
+== Why is C++ unsafe?
+
+unsafe casting, unions, lack of ownership/lifetime checking, raw arrays/pointers
+
+Ok. Lets not do that.
+
+== How to make C++ Safe
 
 There are solutions which comes down to:
 
 * Avoid unsafe language features
 * Use safe library alternatives
-* Enforce with static analysis tools
+* Enforcement via static analysis tools
 
 // == The current landscape of safe C++
 
