--- a/slides.adoc
+++ b/slides.adoc
@@ -38,17 +38,54 @@ NSA Press Release: "NSA advises [...] a strategic shift from programming languag
 
 "[...] languages that both lack traits associated with memory safety and also have high proliferation across critical systems, such as C and C++"
 
-Many of these press releases specifically call out {cpp} as a language that is prone to memory safety issues.
-
-A lot of unsafe feature like raw pointers, manual memory management, unsafe type conversion, and lack of bounds checking. All the default stuff forces the developer to be responsible for memory management.
-
-The complaints are real. {cpp} is powerful and flexible which lets us shoot ourselves in the foot. 
-
 == Why is C++ unsafe?
 
-unsafe casting, unions, lack of ownership/lifetime checking, raw arrays/pointers
+=== unsafe casting
 
-Ok. Lets not do that.
+[source, c++]
+----
+// Casting
+uint32_t long_data = 0xDEADBEEF;
+uint16_t truncated = (uint16_t) long_data;
+// Lost information
+----
+
+=== Unions are crazy
+[source, c++]
+----
+// Silly example, but we do this with bits 
+union Data
+{
+  int i;
+  float f;
+}
+
+Data data;
+data.f =  42.0;
+
+// Yeah not int data
+int value = f;
+----
+
+=== Ownership/lifetimes what?
+[source, c++]
+----
+// lack of ownership/lifetime checking, 
+int32_t* anInt = new int32_t(42);
+delete anInt;
+int32_t badRead = *anInt;
+----
+
+=== Raw arrays because speed
+[source, c++]
+----
+// Raw arrays/pointers
+char buffer[SIZE];
+
+for(int i = 0; i=SIZE; i++){
+  read(buffer[i]);  // WRONG: read(buffer[SIZE])
+}
+----
 
 == How to make C++ Safe
 
