--- a/slides.adoc
+++ b/slides.adoc
@@ -212,8 +212,11 @@ Especially avoid C-style casts
 
 [source, c++]
 ----
+// C style casts can perform many types of casts
 (uint16_t) long_data; // C-style cast
 uint16_t (long_data); // C-style cast
+
+// C++ style casts are more specific and limited
 static_cast<uint16_t>(long_data); // C++ style cast
 const_cast<uint16_t>(long_data); // C++ style cast
 reinterpret_cast<uint16_t>(long_data); // C++ style cast
@@ -229,22 +232,111 @@ data = 42;
 int value = std::get<int>(data);
 ----
 
-=== Ownership & Lifetimes
+=== Ownership, shared_ptr 
+shared_ptr is a shared ownership smart pointer that provides the following features:
 
-This is a lot to cover.
-See clang-tidy ownership checker
+- **Reference Counting**: When a `shared_ptr` is copied or assigned, the internal reference count is incremented. When a `shared_ptr` is destroyed (e.g., goes out of scope) or reset to point to a different object, the reference count is decremented.
+- **Automatic Resource Management**: The object pointed to is automatically destroyed when the reference count becomes zero, ensuring no memory leaks.
+- **Pass By Value**: Passing a `shared_ptr` by value to functions is safe in terms of memory management, but it increases the reference count temporarily.
+- **Thread Safety**: Operations on the reference count are thread-safe, but the object itself is not protected against concurrent access.
+
+Example from the excerpt:
+```cpp
+{
+  std::shared_ptr<CoolThing> ptrToThing(new CoolThing()); // Reference = 1
+  {
+    std::shared_ptr<CoolThing> secondPtrToThing = ptrToThing; // Reference count = 2
+    passByValueFunction(secondPtrToThing); // Temporarily increases reference count
+    // Reference count drops back to 2 after function call
+  }
+  // secondPtrToThing is destroyed, reference count = 1
+}
+// ptrToThing is destroyed, reference count = 0, CoolThing is deleted
+```
+
+This mechanism helps manage dynamic memory and resource allocation more safely and conveniently, reducing the risk of memory leaks and dangling pointers.
+
+=== Ownership, shared_ptr example
+
+
+[source, c++]
+----
+// Declared elsewhere...
+void passByValueFunction(std::shared_ptr<CoolThing> thing);
+
+//  A scope block
+{
+  std::shared_ptr<CoolThing> ptrToThing(new CoolThing());
+  // Reference = 1
+  {
+    std::shared_ptr<CoolThing> secondPtrToThing = ptrToThing;
+    // Reference count = 2
+    passByValueFunction(secondPtrToThing);
+    // This function call copies the argument, 
+    // which results in reference = 3 for the duration
+    // of the function call, then drops to 2 when the
+    // function returns and the copy is destroyed.
+  }
+  // secondPtrToThing is destroyed upon leaving the scope,
+  // and the reference count is now 1.
+}
+// Upon leaving scope, ptrToThing is destroyed, and
+// the reference count = 0, triggering deletion of CoolThing.
+----
+
+=== Ownership, unique_ptr
+
+An exclusive ownership smart pointer that provides the following features:
+
+- **Exclusive Ownership**: A `unique_ptr` has sole ownership of the object it points to. This exclusivity ensures that only one `unique_ptr` can point to the object at any time.
+- **Automatic Resource Management**: When a `unique_ptr` goes out of scope, the destructor for the object it owns is called, and the associated memory is freed. This automatic management helps prevent memory leaks.
+- **Non-Copyable**: `unique_ptr` cannot be copied to ensure exclusive ownership, but it can be moved to transfer ownership from one `unique_ptr` to another using `std::move`.
+- **Custom Deleters**: It supports custom deleters, allowing the user to specify how the object should be destroyed, which is useful for resources that require more than just `delete`, such as file handles or network sockets.
+
+
+=== Ownership, unique_ptr example
+
+[source, c++]
+----
+
+{
+    std::unique_ptr<MyClass> myUniquePtr = std::make_unique<MyClass>();
+    myUniquePtr->doSomething();
+
+    // Transfer ownership
+    std::unique_ptr<MyClass> anotherUniquePtr = std::move(myUniquePtr);
+    // Now, myUniquePtr is null, and anotherUniquePtr owns the object.
+}
+// The MyClass is automatically destroyed when anotherUniquePtr goes out of scope.
+----
+
+
+=== Lifetimes
+
+http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#SS-lifetime
+Design spec https://github.com/isocpp/CppCoreGuidelines/blob/master/docs/Lifetime.pdf
+
+
+    Use RAII to avoid lifetime problems.
+    Use unique_ptr to avoid lifetime problems.
+    Use shared_ptr to avoid lifetime problems.
+    Use references when nullptr isn’t a possibility.
+    Use not_null to catch unexpected nullptr early.
+    Use the bounds profile to avoid range errors.
+
+
 // https://llvm.org/devmtg/2019-04/slides/TechTalk-Horvath-Implementing_the_C++_Core_Guidelines_Lifetime.pdf
 https://clang.llvm.org/extra/clang-tidy/checks/cppcoreguidelines/owning-memory.html
 
 === Span over raw arrays
 [source, c++]
 ----
-    int array[] = {1, 2, 3, 4, 5};
-    gsl::span<int, 5> s(array);
+int array[] = {1, 2, 3, 4, 5};
+gsl::span<int, 5> s(array);
 
-    for(int i : s) {
-        std::cout << i << std::endl;
-    }
+for(int i : s) {
+    std::cout << i << std::endl;
+}
 ----
 
 === Core Materials
