add references slide

--- a/slides.adoc
+++ b/slides.adoc
@@ -453,6 +453,18 @@ void pass_span(gsl::span<int> s) {
 |cppcoreguidelines-owning-memory
 |===
 
+== References
+
+* link:https://github.com/isocpp/CppCoreGuidelines/tree/master/docs[github.com/isocpp/CppCoreGuidelines/docs]
+** link:https://github.com/isocpp/CppCoreGuidelines/blob/master/docs/Introduction%20to%20type%20and%20resource%20safety.pdf[A brief introduction to {cpp}'s model for type and resource safety]
+** link:https://github.com/isocpp/CppCoreGuidelines/blob/master/docs/Lifetime.pdf[Lifetime Safety: Preventing Common dangling]
+** Others
+// ** link:https://github.com/isocpp/CppCoreGuidelines/blob/master/docs/P0122R4.pdf[span: bounds-safe views for sequences of objets]
+// ** link:https://github.com/isocpp/CppCoreGuidelines/blob/master/docs/ctor-dtor-raii-popl12.pdf[A Mehanized Semanticsc for {cpp} Objet Construction and Destruction, with Appliations to Resourcce Management]
+// ** link:https://github.com/isocpp/CppCoreGuidelines/blob/master/docs/gsl-intro.md[Using the Guidelines Support Library (GSL): A Tutorial and FAQ]
+* link:https://herbsutter.com/2024/03/11/safety-in-context/[C++ Safety In Context, Herb Sutter]
+* They also have many talks available on youtube
+
 // Examples
 // [.columns]
 // == Column Text Alignment
