--- a/slides.adoc
+++ b/slides.adoc
@@ -139,15 +139,20 @@ image::images/superset-subset-cpp.jpg[]
 --
 [.column.has-text-left]
 --
-. Don't use unsafe features
-. Use safe alternatives
-. The Guidelines Support Library (GSL) can provide these for older {cpp} standards versions
+. Don't use unsafe  language features
+. Augment with safe alternatives
+. Enforce with with static analysis
+// . The Guidelines Support Library (GSL) can provide these for older {cpp} standards versions
 // . https://github.com/microsoft/GSL
 --
 
+== Superset of a Subset
 
-=== Subset and superset of C++
+image::images/CppCoreGuidelinesGSL.jpg[]
 
+== Guidelines and Profiles
+
+// break up rules and augmentation. CGL / GSL
 image::images/CppCoreGuidelinesGSL.jpg[]
 
 === Core Guidelines Profiles
@@ -220,35 +225,46 @@ Accessing through a pointer that doesn’t point to anything is a major source o
 
 === Lifetime safety profile summary:
 
-* Lifetime.1: Don’t dereference a possibly invalid pointer: detect or avoid.
+  Lifetime.1: Don’t dereference a possibly invalid pointer: detect or avoid.
 
 There is a lot under the covers here. 
 TODO see lifetime checkers
 
-== What does this look like in practice?
- 
+== Guidelines Support Library
 
+// TODO highlight GSL box and 2 major options
+// It provides projects using old compiler versions access to newer facilities
+image::images/Gsl.png[]
 
-=== Avoid casting
+=== Key Facilities
 
-Generally, avoid casting and NEVER use C-style casts
+- `variant<>`
+- `span<>`
+- `owner<>`
+- `unique_ptr<>`
+- `shared_ptr<>`
+- `not_null` and `nullptr`
 
-[source, c++]
-----
-// C style casts can perform many types of casts
-uint32_t long_int = 42;
-uint16_t bad_cast = (uint16_t) long_int; // Bad
-uint16_t bad_cast = uint16_t (long_int); // Bad
+// === Avoid casting
 
-// C++ style casts are more specific and limited
-static_cast<uint16_t>(long_int); // Better
-const_cast<uint16_t>(long_int); // Better
-reinterpret_cast<uint16_t>(long_int); // Better
+// Generally, avoid casting and NEVER use C-style casts
 
-int64_t x = {long_int};
-uint16_t x{long_int}; // Compile Error: -Wc++11-narrowing
-gsl::narrow_cast<uint16_t>(long_int); // Searchable static_cast
-----
+// [source, c++]
+// ----
+// // C style casts can perform many types of casts
+// uint32_t long_int = 42;
+// uint16_t bad_cast = (uint16_t) long_int; // Bad
+// uint16_t bad_cast = uint16_t (long_int); // Bad
+
+// // C++ style casts are more specific and limited
+// static_cast<uint16_t>(long_int); // Better
+// const_cast<uint16_t>(long_int); // Better
+// reinterpret_cast<uint16_t>(long_int); // Better
+
+// int64_t x = {long_int};
+// uint16_t x{long_int}; // Compile Error: -Wc++11-narrowing
+// gsl::narrow_cast<uint16_t>(long_int); // Searchable static_cast
+// ----
 
 === Variants over Unions
 
@@ -263,123 +279,6 @@ int i = std::get<int>(v); // Throws std::bad_variant_access
 const int* p_int = std::get_if<int>(&v);   // Avoid throw by checking for nullptr
 const float* pf = std::get_if<float>(&v); // Valid pointer
 ----
-
-=== Ownership, shared_ptr
-shared_ptr is a shared ownership smart pointer that provides the following features:
-
-- **Reference Counting**: When a `shared_ptr` is copied or assigned, the internal reference count is incremented. When a `shared_ptr` is destroyed (e.g., goes out of scope) or reset to point to a different object, the reference count is decremented.
-- **Automatic Resource Management**: The object pointed to is automatically destroyed when the reference count becomes zero, ensuring no memory leaks.
-- **Pass By Value**: Passing a `shared_ptr` by value to functions is safe in terms of memory management, but it increases the reference count temporarily.
-- **Thread Safety**: Operations on the reference count are thread-safe, but the object itself is not protected against concurrent access.
-
-Example from the excerpt:
-```cpp
-{
-  std::shared_ptr<CoolThing> ptrToThing(new CoolThing()); // Reference = 1
-  {
-    std::shared_ptr<CoolThing> secondPtrToThing = ptrToThing; // Reference count = 2
-    passByValueFunction(secondPtrToThing); // Temporarily increases reference count
-    // Reference count drops back to 2 after function call
-  }
-  // secondPtrToThing is destroyed, reference count = 1
-}
-// ptrToThing is destroyed, reference count = 0, CoolThing is deleted
-```
-
-This mechanism helps manage dynamic memory and resource allocation more safely and conveniently, reducing the risk of memory leaks and dangling pointers.
-
-=== Ownership, shared_ptr example
-
-
-[source, c++]
-----
-// Declared elsewhere...
-void passByValueFunction(std::shared_ptr<CoolThing> thing);
-
-//  A scope block
-{
-  std::shared_ptr<CoolThing> ptrToThing(new CoolThing());
-  // Reference = 1
-  {
-    std::shared_ptr<CoolThing> secondPtrToThing = ptrToThing;
-    // Reference count = 2
-    passByValueFunction(secondPtrToThing);
-    // This function call copies the argument, 
-    // which results in reference = 3 for the duration
-    // of the function call, then drops to 2 when the
-    // function returns and the copy is destroyed.
-  }
-  // secondPtrToThing is destroyed upon leaving the scope,
-  // and the reference count is now 1.
-}
-// Upon leaving scope, ptrToThing is destroyed, and
-// the reference count = 0, triggering deletion of CoolThing.
-----
-
-=== Ownership, unique_ptr
-
-An exclusive ownership smart pointer that provides the following features:
-
-- **Exclusive Ownership**: A `unique_ptr` has sole ownership of the object it points to. This exclusivity ensures that only one `unique_ptr` can point to the object at any time.
-- **Automatic Resource Management**: When a `unique_ptr` goes out of scope, the destructor for the object it owns is called, and the associated memory is freed. This automatic management helps prevent memory leaks.
-- **Non-Copyable**: `unique_ptr` cannot be copied to ensure exclusive ownership, but it can be moved to transfer ownership from one `unique_ptr` to another using `std::move`.
-- **Custom Deleters**: It supports custom deleters, allowing the user to specify how the object should be destroyed, which is useful for resources that require more than just `delete`, such as file handles or network sockets.
-
-
-=== Ownership, unique_ptr example
-
-[source, c++]
-----
-
-{
-    std::unique_ptr<MyClass> myUniquePtr = std::make_unique<MyClass>();
-    myUniquePtr->doSomething();
-
-    // Transfer ownership
-    std::unique_ptr<MyClass> anotherUniquePtr = std::move(myUniquePtr);
-    // Now, myUniquePtr is null, and anotherUniquePtr owns the object.
-}
-// The MyClass is automatically destroyed when anotherUniquePtr goes out of scope.
-----
-
-
-=== Lifetimes
-
-http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#SS-lifetime
-Design spec https://github.com/isocpp/CppCoreGuidelines/blob/master/docs/Lifetime.pdf
-
-
-    Use RAII to avoid lifetime problems.
-    Use unique_ptr to avoid lifetime problems.
-    Use shared_ptr to avoid lifetime problems.
-    Use references when nullptr isn’t a possibility.
-    Use not_null to catch unexpected nullptr early.
-    Use the bounds profile to avoid range errors.
-
-
-// https://llvm.org/devmtg/2019-04/slides/TechTalk-Horvath-Implementing_the_C++_Core_Guidelines_Lifetime.pdf
-https://clang.llvm.org/extra/clang-tidy/checks/cppcoreguidelines/owning-memory.html
-
-=== Liftimes in practice
-
-[source, c++]
-----
-// Embedded systems may use placement new...
-
-// clang-tidy message: initializing non-owner 'int32_t *'
-// (aka 'int *') with a // newly created 'gsl::owner<>' 
-///[cppcoreguidelines-owning-memory]
-int32_t* pAnInt = new int32_t(42); // BAD
-
-// Good! Use ownership semantics
-gsl::owner<int32_t*> pAnInt = new int32_t(42); 
-
-// deleting a pointer through a type that is not marked
-// 'gsl::owner<>'; consider using a smart pointer instead
-// [cppcoreguidelines-owning-memory]
-delete pAnInt;
-----
-
 
 === Span over raw arrays
 [source, c++]
@@ -397,28 +296,159 @@ void pass_span(gsl::span<int> s) {
 }
 ----
 
-=== Papers & Materials
+=== owner<>
 
-* link:https://github.com/isocpp/CppCoreGuidelines/tree/master/docs[github.com/isocpp/CppCoreGuidelines/docs]
-** link:https://github.com/isocpp/CppCoreGuidelines/blob/master/docs/Introduction%20to%20type%20and%20resource%20safety.pdf[A brief introduction to {cpp}'s model for type and resource safety]
-** link:https://github.com/isocpp/CppCoreGuidelines/blob/master/docs/Lifetime.pdf[Lifetime Safety: Preventing ommon dangling]
-** Others
-// ** link:https://github.com/isocpp/CppCoreGuidelines/blob/master/docs/P0122R4.pdf[span: bounds-safe views for sequences of objets]
-// ** link:https://github.com/isocpp/CppCoreGuidelines/blob/master/docs/ctor-dtor-raii-popl12.pdf[A Mehanized Semanticsc for {cpp} Objet Construction and Destruction, with Appliations to Resourcce Management]
-// ** link:https://github.com/isocpp/CppCoreGuidelines/blob/master/docs/gsl-intro.md[Using the Guidelines Support Library (GSL): A Tutorial and FAQ]
-* They also have many talks available on youtube
+[source, c++]
+----
+// Zero overhead indicator that this pointer owns the object
+void g(owner<int*> p, int* q, owner<int*> p2)
+{
+// p = q; // bad: q is not an owner
+// delete q; // bad: q is not an owner
+q = p; // OK: q points to the object owned by p
+delete p; // needed: we are about to overwrite p
+p = p2; // OK: we just deleted p
+p2 = nullptr; // so that there are not two owners of *p2
+// *q = 7; // bad: assignment through now dangling pointer
+delete p; // needed: we are about to leave g()
+}
+----
 
-== Adopting Safe C++
+=== shared_ptr<>
+shared_ptr is a shared ownership smart pointer that provides the following features:
 
-=== Static Analysis
+// - **Reference Counting**: When a `shared_ptr` is copied or assigned, the internal reference count is incremented. When a `shared_ptr` is destroyed (e.g., goes out of scope) or reset to point to a different object, the reference count is decremented.
+// - **Automatic Resource Management**: The object pointed to is automatically destroyed when the reference count becomes zero, ensuring no memory leaks.
+// - **Pass By Value**: Passing a `shared_ptr` by value to functions is safe in terms of memory management, but it increases the reference count temporarily.
+// - **Thread Safety**: Operations on the reference count are thread-safe, but the object itself is not protected against concurrent access.
 
-* clang-tidy provides cppcoreguidelines-* checks to enforce these rules
-* MISRA C++ 2023 also incorporates these rules and static analysis tools like LDRA and Polyspace can will enforce these rules once they support the new standard
+// Example from the excerpt:
+```cpp
+{ // Reference = 1
+std::shared_ptr<CoolThing> ptrToThing(new CoolThing()); 
+{
+  // Reference count = 2
+  std::shared_ptr<CoolThing> 2ndPtrToThing = ptrToThing; 
+  // Temporarily increases reference count
+  passByValueFunction(2ndPtrToThing); 
+  // Reference count drops back to 2 after function call
+}
+// 2ndPtrToThing is destroyed, reference count = 1
+}
+// ptrToThing is destroyed, reference count = 0, 
+// CoolThing is deleted
+```
 
-=== Overlapping rules
+// This mechanism helps manage dynamic memory and resource allocation more safely and conveniently, reducing the risk of memory leaks and dangling pointers.
+
+// === Ownership, shared_ptr example
+
+// [source, c++]
+// ----
+// // Declared elsewhere...
+// void passByValueFunction(std::shared_ptr<CoolThing> thing);
+
+// //  A scope block
+// {
+//   std::shared_ptr<CoolThing> ptrToThing(new CoolThing());
+//   // Reference = 1
+//   {
+//     std::shared_ptr<CoolThing> secondPtrToThing = ptrToThing;
+//     // Reference count = 2
+//     passByValueFunction(secondPtrToThing);
+//     // This function call copies the argument, 
+//     // which results in reference = 3 for the duration
+//     // of the function call, then drops to 2 when the
+//     // function returns and the copy is destroyed.
+//   }
+//   // secondPtrToThing is destroyed upon leaving the scope,
+//   // and the reference count is now 1.
+// }
+// // Upon leaving scope, ptrToThing is destroyed, and
+// // the reference count = 0, triggering deletion of CoolThing.
+// ----
+
+// === Ownership, unique_ptr
+
+// An exclusive ownership smart pointer that provides the following features:
+
+// - **Exclusive Ownership**: A `unique_ptr` has sole ownership of the object it points to. This exclusivity ensures that only one `unique_ptr` can point to the object at any time.
+// - **Automatic Resource Management**: When a `unique_ptr` goes out of scope, the destructor for the object it owns is called, and the associated memory is freed. This automatic management helps prevent memory leaks.
+// - **Non-Copyable**: `unique_ptr` cannot be copied to ensure exclusive ownership, but it can be moved to transfer ownership from one `unique_ptr` to another using `std::move`.
+// - **Custom Deleters**: It supports custom deleters, allowing the user to specify how the object should be destroyed, which is useful for resources that require more than just `delete`, such as file handles or network sockets.
+
+
+=== unique_ptr<>
+
+[source, c++]
+----
+{
+std::unique_ptr<MyObj> uniquePtr = std::make_unique<MyObj>();
+uniquePtr->doSomething();
+
+// Transfer ownership
+std::unique_ptr<MyObj> newOwnerPtr = std::move(uniquePtr);
+// Now, uniquePtr is null, and newOwnerPtr owns the object.
+}
+// The MyObj is automatically destroyed when newOwnerPtr
+// goes out of scope.
+----
+
+
+//     Use RAII to avoid lifetime problems.
+//     Use unique_ptr to avoid lifetime problems.
+//     Use shared_ptr to avoid lifetime problems.
+//     Use references when nullptr isn’t a possibility.
+//     Use not_null to catch unexpected nullptr early.
+//     Use the bounds profile to avoid range errors.
+
+
+// === Liftimes in practice
+
+// [source, c++]
+// ----
+// // Embedded systems may use placement new...
+
+// // clang-tidy message: initializing non-owner 'int32_t *'
+// // (aka 'int *') with a // newly created 'gsl::owner<>' 
+// ///[cppcoreguidelines-owning-memory]
+// int32_t* pAnInt = new int32_t(42); // BAD
+
+// // Good! Use ownership semantics
+// gsl::owner<int32_t*> pAnInt = new int32_t(42); 
+
+// // deleting a pointer through a type that is not marked
+// // 'gsl::owner<>'; consider using a smart pointer instead
+// // [cppcoreguidelines-owning-memory]
+// delete pAnInt;
+// ----
+
+== Too Long; Didn't Read
+
 [cols="2*", options="header"]
 |===
-|Rule |Checker
+|Drop|Pickup 
+|C-Style Casts
+|Named Casts and brace-initialization
+|union {}
+|variant<>
+|raw_arrays[]
+|span<>
+|raw_pointers*
+|owner<> unique_ptr<> shared_ptr<>
+|===
+
+== Static Analysis
+
+`+clang-tidy test.cpp -checks=-*,cppcoreguidelines-*+`
+
+// * clang-tidy provides cppcoreguidelines-* checks to enforce these rules
+// * MISRA C++ 2023 also incorporates these rules and static analysis tools like LDRA and Polyspace will support these rules once they support the new standard
+
+=== Guidelines & Static Checking Table
+[cols="2*", options="header"]
+|===
+|Core Guideline |clang-tidy rule
 |Type.1 Avoid Casts: Don't use reinterpret_cast
 |cppcoreguidelines-pro-type-reinterpret-cast
 |Type.1 Avoid Casts: Don't use static_cast
